updated home page

--- a/src/libs/translations/translation_en.json
+++ b/src/libs/translations/translation_en.json
@@ -1,7 +1,7 @@
 {
   "homepage.slogan": "A Marketplace for Freelancers on Blockchain",
   "homepage.description": "Be part of our community to find a job or hire experts. We are launching soon, but until then, join our BETA version!",
-  "homepage.description2": "Test",
+  "homepage.description2": "",
   "homepage.register_button": "Become freelancer",
   "homepage.jobpost_button": "Post job"
 }
